nori-rs/tui-pty-e2e/tests/snapshots/nori_footer__default_idle_footer.snap
---
source: tui-pty-e2e/tests/nori_footer.rs
expression: normalize_for_input_snapshot(contents)
---
• Mock ACP options: Model=Mock Default Model, Thought Level=Medium (/config to change)

› [DEFAULT_PROMPT]

                                                                                                                ⎇ master
