nori-rs/tui-pty-e2e/tests/snapshots/nori_footer__full_footer.snap
---
source: tui-pty-e2e/tests/nori_footer.rs
expression: normalize_for_input_snapshot(contents)
---
  › Nori CLI v0.0.0

  System       [TMP_DIR] · Agent approvals
  Agent        Mock ACP

• Mock ACP options: Model=Mock Default Model, Thought Level=Medium (/config to change)

› [DEFAULT_PROMPT]

  ! · Skillset: [SKILLSET] · Skillsets v0.9.99                                                               ⎇ master
